router/iptables.conf
# Generated by iptables-save v1.6.1 on Wed Nov 24 09:52:28 2021
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [12:912]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp --icmp-type 8 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i vlan.201 -p udp -m udp --dport 67 -m comment --comment "dhcp upl" -j ACCEPT
-A INPUT -i vlan.202 -p udp -m udp --dport 67 -m comment --comment "dhcp upl" -j ACCEPT
-A INPUT -i vlan.199 -m comment --comment jury -j ACCEPT
-A INPUT -j DROP
-A FORWARD -o vlan.201 -j ACCEPT
-A FORWARD -o vlan.202 -j ACCEPT
-A FORWARD -i vlan.201 -j ACCEPT
-A FORWARD -i vlan.202 -j ACCEPT
-A FORWARD -j DROP
COMMIT
# Completed on Wed Nov 24 09:52:28 2021
# Generated by iptables-save v1.6.1 on Wed Nov 24 09:52:28 2021
*nat
:PREROUTING ACCEPT [38744:5595829]
:INPUT ACCEPT [10:1804]
:OUTPUT ACCEPT [89:4878]
:POSTROUTING ACCEPT [69:3360]
-A POSTROUTING -o vlan.201 -j MASQUERADE
-A POSTROUTING -o vlan.202 -j MASQUERADE
COMMIT
# Completed on Wed Nov 24 09:52:28 2021
